--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-setuptools~=49.2.1
-click~=8.0.3
-click-aliases~=1.0.1
-requests~=2.27.1
-lxml~=4.6.3
-dataclasses~=0.8; python_version < '3.7'
 chardet~=4.0.0
+click-aliases~=1.0.1
+click~=8.0.3
+dataclasses~=0.8; python_version < '3.7'
+jinja2>=3.0.2
+lxml~=4.6.3
+requests~=2.27.1
+setuptools>=60.5.0
