update: requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ click-aliases~=1.0.1
 click~=8.0.3
 dataclasses~=0.8; python_version < '3.7'
 jinja2>=3.0.2
-lxml~=4.6.3
-requests~=2.27.1
-setuptools>=60.5.0
+lxml>=4.6.3
+requests>=2.27.1
