--- a/create_config_file/templates/common/aliases.yaml
+++ b/create_config_file/templates/common/aliases.yaml
@@ -8,7 +8,7 @@ common:
 # Aliases for Git
   get: git clone
   gad: git add
-  gcmt: git commit
+  gcmt: git commit -m
   gst: git status
   gph: git push
   gpl: git pull
