add: corn job example template

--- a/project_scaffold/templates/python/Makefile
+++ b/project_scaffold/templates/python/Makefile
@@ -50,3 +50,6 @@ clean:
 tag:
 	git tag v$(APP_VERSION)
 	git push origin v$(APP_VERSION)
+
+build-onefile:
+	pyinstaller --onefile -y --clean -n $(PYPI_PACKAGE) main.py
