update: swagger comments

--- a/project_scaffold/templates/golang/Makefile
+++ b/project_scaffold/templates/golang/Makefile
@@ -48,6 +48,7 @@ swag:
 	go get github.com/swaggo/swag
 	-(export PATH=$(shell go env GOPATH)/bin:$$PATH)
 	-(swag init)
+	-(swag fmt)
 
 build:
 	$(BUILD_CMD) -o $(UNIFIED_NAME) main.go
