--- a/project_scaffold/templates/qt5/Makefile
+++ b/project_scaffold/templates/qt5/Makefile
@@ -15,16 +15,29 @@ ifeq ($(OS), Windows_NT)
 UNIFIED_NAME := $(UNIFIED_NAME).exe
 endif
 
-CMAKE_BUILD_DIR = cmake-build-release
+CMAKE_BUILD_PREFIX = cmake-build
 
 all: run
 
-build: clean
-	cd $(CMAKE_BUILD_DIR); cmake -G "Unix Makefiles" ..; make
+build-debug:
+	cd $(CMAKE_BUILD_PREFIX)-debug; cmake -DCMAKE_BUILD_TYPE=Debug -G "Unix Makefiles" ..; make
 
-run: build
-	cd $(CMAKE_BUILD_DIR); ./$(UNIFIED_NAME)
+build-release:
+	cd $(CMAKE_BUILD_PREFIX)-release; cmake -DCMAKE_BUILD_TYPE=Release -G "Unix Makefiles" ..; make
+
+build: clean build-release
+
+run-debug: build-debug
+	cd $(CMAKE_BUILD_PREFIX)-debug; ./$(UNIFIED_NAME)
+
+run-release: build-release
+	cd $(CMAKE_BUILD_PREFIX)-release; ./$(UNIFIED_NAME)
+
+run: clean run-release
 
 clean:
-	-(mkdir $(CMAKE_BUILD_DIR))
-	cd $(CMAKE_BUILD_DIR); rm -r *
+	-(mkdir $(CMAKE_BUILD_PREFIX)-debug)
+	cd $(CMAKE_BUILD_PREFIX)-debug; rm -r *
+
+	-(mkdir $(CMAKE_BUILD_PREFIX)-release)
+	cd $(CMAKE_BUILD_PREFIX)-release; rm -r *
