update: change to default installation directory

--- a/project_scaffold/templates/qt5/CMakeLists.txt
+++ b/project_scaffold/templates/qt5/CMakeLists.txt
@@ -22,10 +22,13 @@ if (IS_X86)
      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
 endif()
 
-# set(QT_PATH "C:/Qt/Qt5.12.6")
-set(QT_PATH "C:/Developer/qt")
+# Qt default installation directory
+set(QT_PATH "C:/Qt/Qt5.12.6")
+
 set(QT_VERSION "5.12.6")
+
 set(QT_COMPILE_VERSION "mingw73_64")
+# set(QT_COMPILE_VERSION "mingw73_32")
 
 set(CMAKE_PREFIX_PATH "${QT_PATH}/${QT_VERSION}/${QT_COMPILE_VERSION}")
 message(STATUS "CMake Prefix Path: ${CMAKE_PREFIX_PATH}")
