--- a/project_scaffold/templates/qt5/CMakeLists.txt
+++ b/project_scaffold/templates/qt5/CMakeLists.txt
@@ -34,10 +34,10 @@ set(CMAKE_PREFIX_PATH "${QT_PATH}/${QT_VERSION}/${QT_COMPILE_VERSION}")
 message(STATUS "CMake Prefix Path: ${CMAKE_PREFIX_PATH}")
 
 # Set environment variables
-set(ENV{PATH} "${CMAKE_PREFIX_PATH}/bin;${QT_PATH}/Tools/${QT_VERSION}/bin;%PATH%")
+set(ENV{PATH} "${CMAKE_PREFIX_PATH}/bin;${QT_PATH}/Tools/${QT_COMPILE_VERSION}/bin;%PATH%")
 message("PATH=$ENV{PATH}")
 
-{%- if template==".qml" %}
+{% if template==".qml" -%}
 set(ENV{QML2_IMPORT_PATH} "${CMAKE_PREFIX_PATH}/qml")
 message("QML2_IMPORT_PATH=$ENV{QML2_IMPORT_PATH}")
 {%- endif %}
@@ -45,7 +45,7 @@ message("QML2_IMPORT_PATH=$ENV{QML2_IMPORT_PATH}")
 set(ENV{QT_ASSUME_STDERR_HAS_CONSOLE} 1)
 message("QT_ASSUME_STDERR_HAS_CONSOLE=$ENV{QT_ASSUME_STDERR_HAS_CONSOLE}")
 
-message(STATUS "On Clion, you should set QT_ASSUME_STDERR_HAS_CONSOLE=$ENV{QT_ASSUME_STDERR_HAS_CONSOLE};PATH=${CMAKE_PREFIX_PATH}/bin;${QT_PATH}/Tools/${QT_VERSION}/bin;%PATH%;QML2_IMPORT_PATH=${CMAKE_PREFIX_PATH}/qml")
+message(STATUS "On Clion, you should set QT_ASSUME_STDERR_HAS_CONSOLE=$ENV{QT_ASSUME_STDERR_HAS_CONSOLE};PATH=${CMAKE_PREFIX_PATH}/bin\;${QT_PATH}/Tools/${QT_COMPILE_VERSION}/bin;QML2_IMPORT_PATH=${CMAKE_PREFIX_PATH}/qml")
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 link_directories(${CMAKE_SOURCE_DIR}/lib)
