add: all problems are compilation problems

--- a/project_scaffold/templates/qt5/CMakeLists.txt
+++ b/project_scaffold/templates/qt5/CMakeLists.txt
@@ -3,7 +3,10 @@
 cmake_minimum_required(VERSION 3.1)
 project({{APP_NAME}})
 
+# All problems are compilation problems
+
 # Compile Typescript
+# npm install -g typescript
 
 set(
         TYPESCRIPT_FILES
