--- a/project_scaffold/templates/qt5/CMakeLists.txt
+++ b/project_scaffold/templates/qt5/CMakeLists.txt
@@ -3,7 +3,8 @@
 cmake_minimum_required(VERSION 3.1)
 project({{APP_NAME}})
 
-# All problems are compilation problems
+# All problems are compilation problems.
+# Better to forgo manual compilation.
 
 # Compile Typescript
 # npm install -g typescript
