--- a/project_scaffold/templates/qt5/CMakeLists.txt
+++ b/project_scaffold/templates/qt5/CMakeLists.txt
@@ -82,7 +82,7 @@ set(
         PACKAGES
         Concurrent
         Core
-        {%- if template==".gui" %}
+        {%- if template!=".console" %}
         Gui
         {%- endif %}
         Multimedia
