--- a/project_scaffold/templates/qt5/Makefile
+++ b/project_scaffold/templates/qt5/Makefile
@@ -7,19 +7,7 @@
 .EXPORT_ALL_VARIABLES: ; # send all vars to shell
 .IGNORE: clean;            # ignore all errors, keep going
 
-APP_VERSION = 0.0.1
-APP_NAME = {{APP_NAME}}
-
-UNIFIED_NAME := $(APP_NAME)
-ifeq ($(OS), Windows_NT)
-UNIFIED_NAME := $(UNIFIED_NAME).exe
-endif
-
-CMAKE_BUILD_PREFIX = cmake-build
-CMAKE_OPTIONS = -G "Unix Makefiles"
-MAKE_OPTIONS = -j 64
-
-all: run
+all: clean
 
 info:
 	@echo $(SHELL)
@@ -28,22 +16,6 @@ init:
 	git init
 	git add .
 	git commit -m "first commit"
-
-build-debug:
-	cd $(CMAKE_BUILD_PREFIX)-debug; cmake $(CMAKE_OPTIONS) -DCMAKE_BUILD_TYPE=Debug ..; make $(MAKE_OPTIONS)
-
-build-release:
-	cd $(CMAKE_BUILD_PREFIX)-release; cmake $(CMAKE_OPTIONS) -DCMAKE_BUILD_TYPE=Release ..; make $(MAKE_OPTIONS)
-
-build: clean build-release
-
-run-debug: build-debug
-	cd $(CMAKE_BUILD_PREFIX)-debug; ./$(UNIFIED_NAME)
-
-run-release: build-release
-	cd $(CMAKE_BUILD_PREFIX)-release; ./$(UNIFIED_NAME)
-
-run: clean run-release
 
 clean:
 	-(mkdir $(CMAKE_BUILD_PREFIX)-debug)
